--- a/app/index.html
+++ b/app/index.html
@@ -4,16 +4,307 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Ojjo</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-
-  <header class="header"></header>
   <div class="wrapper">
-    <main class="main"></main>
-    <footer class="footer"></footer>
+    <section class="hero">
+      <header class="header">
+        <div class="container-top">
+          <div class="header__inner">
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#">
+                    Контрагентам
+                  </a>
+                </li>
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#">
+                    Дизайнерам
+                  </a>
+                </li>
+                <li class="menu__list-item">
+                  <a class="menu__list-link" href="#">
+                    Вакансии
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <div class="logo">
+              <a class="logo__link" href="#">
+                <img class="logo__img" src="images/logo.svg" alt="logo">
+              </a>
+            </div>
+            <ul class="profile__list">
+              <li class="profile__list-item">
+                <form class="profile__form" action="/search/">
+                  <label class="profile__label">
+                    <img class="profile__form-label-img" src="images/search-icon.svg" alt="search">
+                    <input class="profile__input" type="search" placeholder="Поиск">
+                  </label>
+                </form>
+              </li>
+              <li class="profile__list-item">
+                <a class="profile__list-link" href="#">
+                  Вход
+                </a>/
+                <a class="profile__list-link" href="#">
+                  Регистрация
+                </a>
+              </li>
+              <li class="profile__list-item profile__list-item-icon">
+                <a class="profile__list-link" href="#">
+                  <img class="profile__list-user" src="images/user-icon.svg" alt="account">
+                </a>
+                <a class="profile__list-link" href="#">
+                  <img class="profile__list-favorite" src="images/favorit-icon.svg" alt="favorite">
+                </a>
+              </li>
+            </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+      <div class="hero__inner">
+        <div class="top">
+          <h1 class="top__title">
+            Долго, дорого, богато!
+          </h1>
+          <a class="top__btn" href="#">
+            каталог изделий
+          </a>
+        </div>
+
+        <div class="partners">
+          <div class="partners__inner">
+            <div class="partners__item">
+              <img class="partners__img" src="images/partners.png" alt="images">
+            </div>
+            <div class="partners__item">
+              <img class="partners__img" src="images/partners.png" alt="images">
+            </div>
+            <div class="partners__item">
+              <img class="partners__img" src="images/partners.png" alt="images">
+            </div>
+            <div class="partners__item">
+              <img class="partners__img" src="images/partners.png" alt="images">
+            </div>
+            <div class="partners__item">
+              <img class="partners__img" src="images/partners.png" alt="images">
+            </div>
+            <div class="partners__item">
+              <img class="partners__img" src="images/partners.png" alt="images">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="assortment">
+      <div class="container">
+        <p class="assortment__pretitle">
+          К мероприятиям
+        </p>
+        <h3 class="assortment__title">
+          Настоящая красота здесь!
+        </h3>
+        <div class="assortment__buttons">
+          <button class="assortment__btn">
+            Свадьба
+          </button>
+          <button class="assortment__btn">
+            Мужу
+          </button>
+          <button class="assortment__btn">
+            Жене
+          </button>
+          <button class="assortment__btn">
+            Партнеру
+          </button>
+          <button class="assortment__btn">
+            Коллекции
+          </button>
+          <button class="assortment__btn">
+            Редкость
+          </button>
+        </div>
+        <div class="assortment__inner">
+          <div class="assortment__items">
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/1.jpg" alt="images">
+              <span>Кольца</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/2.jpg" alt="images">
+              <span>cерьги</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/3.jpg" alt="images">
+              <span>подвески</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/4.jpg" alt="images">
+              <span>запонки</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/5.jpg" alt="images">
+              <span>браслеты</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/6.jpg" alt="images">
+              <span>часы</span>
+            </a>
+          </div>
+          <div class="assortment__items">
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/6.jpg" alt="images">
+              <span>Кольца</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/5.jpg" alt="images">
+              <span>cерьги</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/4.jpg" alt="images">
+              <span>подвески</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/3.jpg" alt="images">
+              <span>запонки</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/2.jpg" alt="images">
+              <span>браслеты</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/1.jpg" alt="images">
+              <span>часы</span>
+            </a>
+          </div>
+
+          <div class="assortment__items">
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/1.jpg" alt="images">
+              <span>Кольца</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/2.jpg" alt="images">
+              <span>cерьги</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/3.jpg" alt="images">
+              <span>подвески</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/4.jpg" alt="images">
+              <span>запонки</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/5.jpg" alt="images">
+              <span>браслеты</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/6.jpg" alt="images">
+              <span>часы</span>
+            </a>
+          </div>
+
+          <div class="assortment__items">
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/1.jpg" alt="images">
+              <span>Кольца</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/2.jpg" alt="images">
+              <span>cерьги</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/3.jpg" alt="images">
+              <span>подвески</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/4.jpg" alt="images">
+              <span>запонки</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/5.jpg" alt="images">
+              <span>браслеты</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/6.jpg" alt="images">
+              <span>часы</span>
+            </a>
+          </div>
+
+          <div class="assortment__items">
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/1.jpg" alt="images">
+              <span>Кольца</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/2.jpg" alt="images">
+              <span>cерьги</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/3.jpg" alt="images">
+              <span>подвески</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/5.jpg" alt="images">
+              <span>запонки</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/6.jpg" alt="images">
+              <span>браслеты</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/4.jpg" alt="images">
+              <span>часы</span>
+            </a>
+          </div>
+
+          <div class="assortment__items">
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/2.jpg" alt="images">
+              <span>Кольца</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/1.jpg" alt="images">
+              <span>cерьги</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/4.jpg" alt="images">
+              <span>подвески</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/3.jpg" alt="images">
+              <span>запонки</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/5.jpg" alt="images">
+              <span>браслеты</span>
+            </a>
+            <a class="assortment__item" href="#">
+              <img class="assortment__img" src="images/assortment/6.jpg" alt="images">
+              <span>часы</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="wrapper">
+      <main class="main"></main>
+      <footer class="footer"></footer>
+    </div>
+
+
   </div>
 
 
