add page product

--- a/app/category.html
+++ b/app/category.html
@@ -79,7 +79,69 @@
 
     <main class="main">
 
-     
+      <section class="category">
+        <div class="container">
+          <div class="category__items">
+            <div class="category__item">
+              <select class="category__select" name="category-select">
+                <option class="category__select-disabled" value="disabled">Бренд</option>
+                <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
+                <option class="category__select-optin" value="LOUIS VUITTON">LOUIS VUITTON</option>
+                <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
+                <option class="category__select-option" value="LOUIS VUITTON">LOUIS VUITTON</option>
+              </select>
+            </div>
+            <div class="category__item">
+              <select class="category__select" name="category-select">
+                <option class="category__select-disabled" value="disabled">Цена</option>
+                <option class="category__select-option" value="до 100">до 100</option>
+                <option class="category__select-optin" value="100-1000">100-1000</option>
+                <option class="category__select-option" value="1000-10000">1000-10000</option>
+                <option class="category__select-option" value="от 10000">от 10000</option>
+              </select>
+            </div>
+            <div class="category__item">
+              <select class="category__select" name="category-select">
+                <option class="category__select-disabled" value="disabled">Для кого</option>
+                <option class="category__select-option" value="Мужчины">Мужчины</option>
+                <option class="category__select-optin" value="Женщины">Женщины</option>
+                <option class="category__select-option" value="Подростки">Подростки</option>
+                <option class="category__select-option" value="Дети">Дети</option>
+              </select>
+            </div>
+
+            <div class="category__item">
+              <select class="category__select" name="category-select">
+                <option class="category__select-disabled" value="disabled">Сезон </option>
+                <option class="category__select-option" value="Зимняя">Зимняя</option>
+                <option class="category__select-optin" value="Осенняя">Осенняя</option>
+                <option class="category__select-option" value="Весенняя">Весенняя</option>
+                <option class="category__select-option" value="Летняя">Летняя</option>
+              </select>
+            </div>
+
+            <div class="category__item">
+              <select class="category__select" name="category-select">
+                <option class="category__select-disabled" value="disabled">Коллекция</option>
+                <option class="category__select-option" value="Dolce & Gabanna"></option>
+                <option class="category__select-optin" value="LOUIS VUITTON">LOUIS VUITTON</option>
+                <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
+                <option class="category__select-option" value="LOUIS VUITTON">LOUIS VUITTON</option>
+              </select>
+            </div>
+
+            <div class="category__item">
+              <select class="category__select" name="category-select">
+                <option class="category__select-disabled" value="disabled">Бренд</option>
+                <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
+                <option class="category__select-optin" value="LOUIS VUITTON">LOUIS VUITTON</option>
+                <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
+                <option class="category__select-option" value="LOUIS VUITTON">LOUIS VUITTON</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </section>
 
     </main>
 
