--- a/app/product.html
+++ b/app/product.html
@@ -219,9 +219,9 @@
                 </p>
               </div>
 
-              <a class="information__btn" href="#">
+              <div class="information__btn  ">
                 читать полностью
-              </a>
+              </div>
             </div>
             <div class="information__benefits">
               <ul class="information__items">
@@ -259,6 +259,78 @@
           </div>
         </div>
       </div>
+      
+      <section class="catalog">
+        <div class="container">
+          <div class="catalog__pretitle">
+            Мы подготовили для вас кое-что еще
+          </div>
+          <h4 class="catalog__title">
+            Товары, которые могут Вам понравиться
+          </h4>
+          <ul class="catalog__items">
+            <li class="catalog__item">
+              <a class="catalog__item-link" href="#">
+                <img class="catalog__item-img" src="images/products/1.jpg" alt="images">
+              </a>
+              <a class="catalog__item-category" href="#">
+                Подвеска
+              </a>
+              <a class="catalog__item-brend" href="#">Dolce & Gabanna</a>
+              <a class="catalog__item-price" href="#">175 000 ₽</a>
+            </li>
+            <li class="catalog__item">
+              <a class="catalog__item-link" href="#">
+                <img class="catalog__item-img" src="images/products/1.jpg" alt="images">
+              </a>
+              <a class="catalog__item-category" href="#">
+                Подвеска
+              </a>
+              <a class="catalog__item-brend" href="#">Dolce & Gabanna</a>
+              <a class="catalog__item-price" href="#">175 000 ₽</a>
+            </li>
+            <li class="catalog__item">
+              <a class="catalog__item-link" href="#">
+                <img class="catalog__item-img" src="images/products/1.jpg" alt="images">
+              </a>
+              <a class="catalog__item-category" href="#">
+                Подвеска
+              </a>
+              <a class="catalog__item-brend" href="#">Dolce & Gabanna</a>
+              <a class="catalog__item-price" href="#">175 000 ₽</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="mailing">
+        <div class="mailing__pretitle">
+          Полезные советы и персональный предложения
+        </div>
+        <h5 class="mailing__title">
+          Эксклюзивная рассылка
+        </h5>
+        <div class="mailing__inner">
+          <ul class="mailing__list">
+            <li class="mailing__list-item">
+              Личный менеджер
+            </li>
+            <li class="mailing__list-item">
+              Доставка и оформление
+            </li> <li class="mailing__list-item">
+              Индивидуальный дизайн
+            </li>
+          </ul>
+          <div class="mailing__border">
+            <form class="mailing__form">
+              <input class="mailing__form-input" type="email" placeholder="Ваш e-mail">
+              <button class="mailing__form-btn">
+                отправить
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
 
