add page category

--- a/app/category.html
+++ b/app/category.html
@@ -73,7 +73,7 @@
       </header>
     </section>
 
-
+    
 
 
 
@@ -84,7 +84,7 @@
           <div class="category__items">
             <div class="category__item">
               <select class="category__select" name="category-select">
-                <option class="category__select-disabled" value="disabled">Бренд</option>
+                <option class="category__select-option" value="disabled">Бренд</option>
                 <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
                 <option class="category__select-optin" value="LOUIS VUITTON">LOUIS VUITTON</option>
                 <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
@@ -93,7 +93,7 @@
             </div>
             <div class="category__item">
               <select class="category__select" name="category-select">
-                <option class="category__select-disabled" value="disabled">Цена</option>
+                <option class="category__select-option" value="disabled">Цена</option>
                 <option class="category__select-option" value="до 100">до 100</option>
                 <option class="category__select-optin" value="100-1000">100-1000</option>
                 <option class="category__select-option" value="1000-10000">1000-10000</option>
@@ -102,7 +102,7 @@
             </div>
             <div class="category__item">
               <select class="category__select" name="category-select">
-                <option class="category__select-disabled" value="disabled">Для кого</option>
+                <option class="category__select-option" value="disabled">Для кого</option>
                 <option class="category__select-option" value="Мужчины">Мужчины</option>
                 <option class="category__select-optin" value="Женщины">Женщины</option>
                 <option class="category__select-option" value="Подростки">Подростки</option>
@@ -112,7 +112,7 @@
 
             <div class="category__item">
               <select class="category__select" name="category-select">
-                <option class="category__select-disabled" value="disabled">Сезон </option>
+                <option class="category__select-option" value="disabled">Сезон </option>
                 <option class="category__select-option" value="Зимняя">Зимняя</option>
                 <option class="category__select-optin" value="Осенняя">Осенняя</option>
                 <option class="category__select-option" value="Весенняя">Весенняя</option>
@@ -122,27 +122,210 @@
 
             <div class="category__item">
               <select class="category__select" name="category-select">
-                <option class="category__select-disabled" value="disabled">Коллекция</option>
-                <option class="category__select-option" value="Dolce & Gabanna"></option>
-                <option class="category__select-optin" value="LOUIS VUITTON">LOUIS VUITTON</option>
-                <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
-                <option class="category__select-option" value="LOUIS VUITTON">LOUIS VUITTON</option>
+                <option class="category__select-option" value="disabled">Коллекция</option>
+                <option class="category__select-option" value="Коллекция1">Коллекция1</option>
+                <option class="category__select-optin" value="Коллекция2">Коллекция2</option>
+                <option class="category__select-option" value="Коллекция3">Коллекция3</option>
+                <option class="category__select-option" value="Коллекция4">Коллекция4</option>
               </select>
             </div>
 
             <div class="category__item">
               <select class="category__select" name="category-select">
-                <option class="category__select-disabled" value="disabled">Бренд</option>
-                <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
-                <option class="category__select-optin" value="LOUIS VUITTON">LOUIS VUITTON</option>
-                <option class="category__select-option" value="Dolce & Gabanna">Dolce & Gabanna</option>
-                <option class="category__select-option" value="LOUIS VUITTON">LOUIS VUITTON</option>
+                <option class="category__select-option" value="disabled">Событие</option>
+                <option class="category__select-option" value="Событие1">Событие1</option>
+                <option class="category__select-optin" value="Событие2">Событие2</option>
+                <option class="category__select-option" value="Событие3">Событие3</option>
+                <option class="category__select-option" value="Событие4">Событие4</option>
               </select>
             </div>
           </div>
+
+          <div class="catalog__box">
+            <ul class="catalog__items">
+              <li class="catalog__item">
+                <a class="catalog__item-link" href="#">
+                  <img class="catalog__item-img" src="images/products/1.jpg" alt="images">
+                </a>
+                <a class="catalog__item-category" href="#">
+                  Подвеска
+                </a>
+                <a class="catalog__item-brend" href="#">Dolce & Gabanna</a>
+                <a class="catalog__item-price" href="#">175 000 ₽</a>
+              </li>
+              <li class="catalog__item">
+                <a class="catalog__item-link" href="#">
+                  <img class="catalog__item-img" src="images/products/1.jpg" alt="images">
+                </a>
+                <a class="catalog__item-category" href="#">
+                  Подвеска
+                </a>
+                <a class="catalog__item-brend" href="#">Dolce & Gabanna</a>
+                <a class="catalog__item-price" href="#">175 000 ₽</a>
+              </li>
+              <li class="catalog__item">
+                <a class="catalog__item-link" href="#">
+                  <img class="catalog__item-img" src="images/products/1.jpg" alt="images">
+                </a>
+                <a class="catalog__item-category" href="#">
+                  Подвеска
+                </a>
+                <a class="catalog__item-brend" href="#">Dolce & Gabanna</a>
+                <a class="catalog__item-price" href="#">175 000 ₽</a>
+              </li>
+            </ul>
+          </div>
+          <ul class="catalog__items">
+            <li class="catalog__item">
+              <a class="catalog__item-link" href="#">
+                <img class="catalog__item-img" src="images/products/1.jpg" alt="images">
+              </a>
+              <a class="catalog__item-category" href="#">
+                Подвеска
+              </a>
+              <a class="catalog__item-brend" href="#">Dolce & Gabanna</a>
+              <a class="catalog__item-price" href="#">175 000 ₽</a>
+            </li>
+            <li class="catalog__item">
+              <a class="catalog__item-link" href="#">
+                <img class="catalog__item-img" src="images/products/1.jpg" alt="images">
+              </a>
+              <a class="catalog__item-category" href="#">
+                Подвеска
+              </a>
+              <a class="catalog__item-brend" href="#">Dolce & Gabanna</a>
+              <a class="catalog__item-price" href="#">175 000 ₽</a>
+            </li>
+            <li class="catalog__item">
+              <a class="catalog__item-link" href="#">
+                <img class="catalog__item-img" src="images/products/1.jpg" alt="images">
+              </a>
+              <a class="catalog__item-category" href="#">
+                Подвеска
+              </a>
+              <a class="catalog__item-brend" href="#">Dolce & Gabanna</a>
+              <a class="catalog__item-price" href="#">175 000 ₽</a>
+            </li>
+          </ul>
+          <div class="catalog__btn">
+          <a class="catalog__btn-link" href="#">
+            покажите еще
+          </a>
+        </div>
         </div>
       </section>
+      <div class="information">
+        <div class="container">
+          <div class="information__inner">
+            <div class="information__description">
+              <h5 class="information__title">
+                Полное описание товара
+              </h5>
+              <div class="information__text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, lorem eu commodo porttitor erat. Amet
+                  mauris
+                  cursus bibendum in egestas. Nulla porttitor amet quam elit, mauris. Tortor egestas dignissim augue
+                  suspendisse
+                  rutrum pretium lobortis dolor. Commodo sagittis at amet faucibus faucibus id. Bibendum placerat
+                  convallis
+                  gravida eu quisque et augue. Sed dignissim amet ut vitae at ornare sed.
+                  Commodo sagittis at amet faucibus faucibus id. Bibendum placerat convallis gravida eu quisque et augue
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, lorem eu commodo porttitor erat. Amet
+                  mauris
+                  cursus bibendum in egestas. Nulla porttitor amet quam elit, mauris. Tortor egestas dignissim augue
+                  suspendisse
+                  rutrum pretium lobortis dolor. Commodo sagittis at amet faucibus faucibus id. Bibendum placerat
+                  convallis
+                  gravida eu quisque et augue. Sed dignissim amet ut vitae at ornare sed.
+                  Commodo sagittis at amet faucibus faucibus id. Bibendum placerat convallis gravida eu quisque et augue
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, lorem eu commodo porttitor erat. Amet
+                  mauris
+                  cursus bibendum in egestas. Nulla porttitor amet quam elit, mauris. Tortor egestas dignissim augue
+                  suspendisse
+                  rutrum pretium lobortis dolor. Commodo sagittis at amet faucibus faucibus id. Bibendum placerat
+                  convallis
+                  gravida eu quisque et augue. Sed dignissim amet ut vitae at ornare sed.
+                  Commodo sagittis at amet faucibus faucibus id. Bibendum placerat convallis gravida eu quisque et augue
+                </p>
+                <p>
+                  Sed
+                  dignissim amet ut vitae at ornare sed.
+                </p>
+              </div>
 
+              <div class="information__btn  ">
+                читать полностью
+              </div>
+            </div>
+            <div class="information__benefits">
+              <ul class="information__items">
+                <li class="information__item">
+                  <img class="information__item-img" src="images/delivery-icon.svg" alt="images">
+                  <p class="information__item-text">
+                    Бесплатная
+                    доставка
+                  </p>
+                </li>
+                <li class="information__item">
+                  <img class="information__item-img" src="images/design-icon.svg" alt="images">
+                  <p class="information__item-text">
+                    Индивидуальный
+                    дизайн
+                  </p>
+                </li>
+
+                <li class="information__item">
+                  <img class="information__item-img" src="images/fitting-icon.svg" alt="images">
+                  <p class="information__item-text">
+                    Бесплатная
+                    примерка
+                  </p>
+                </li>
+                <li class="information__item">
+                  <img class="information__item-img" src="images/approach-icon.svg" alt="images">
+                  <p class="information__item-text">
+                    Личный<br>
+                    подход
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <section class="mailing">
+        <div class="mailing__pretitle">
+          Полезные советы и персональный предложения
+        </div>
+        <h5 class="mailing__title">
+          Эксклюзивная рассылка
+        </h5>
+        <div class="mailing__inner">
+          <ul class="mailing__list">
+            <li class="mailing__list-item">
+              Личный менеджер
+            </li>
+            <li class="mailing__list-item">
+              Доставка и оформление
+            </li> <li class="mailing__list-item">
+              Индивидуальный дизайн
+            </li>
+          </ul>
+          <div class="mailing__border">
+            <form class="mailing__form">
+              <input class="mailing__form-input" type="email" placeholder="Ваш e-mail">
+              <button class="mailing__form-btn">
+                отправить
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
 
