add adaptive main page

--- a/app/category.html
+++ b/app/category.html
@@ -13,65 +13,63 @@
 
 <body>
   <div class="wrapper">
-    <section class="hero">
-      <header class="header">
-        <div class="container-top">
-          <div class="header__inner">
-            <nav class="menu">
-              <ul class="menu__list">
-                <li class="menu__list-item">
-                  <a class="menu__list-link" href="#">
-                    Контрагентам
-                  </a>
-                </li>
-                <li class="menu__list-item">
-                  <a class="menu__list-link" href="#">
-                    Дизайнерам
-                  </a>
-                </li>
-                <li class="menu__list-item">
-                  <a class="menu__list-link" href="#">
-                    Вакансии
-                  </a>
-                </li>
-              </ul>
-            </nav>
-            <div class="logo">
-              <a class="logo__link" href="#">
-                <img class="logo__img" src="images/logo.svg" alt="logo">
-              </a>
-            </div>
-            <ul class="profile__list">
-              <li class="profile__list-item">
-                <form class="profile__form" action="/search/">
-                  <label class="profile__label">
-                    <img class="profile__form-label-img" src="images/search-icon.svg" alt="search">
-                    <input class="profile__input" type="search" placeholder="Поиск">
-                  </label>
-                </form>
-              </li>
-              <li class="profile__list-item">
-                <a class="profile__list-link profile__list-linkentrance" href="#">
-                  Вход
-                </a>
-                <a class="profile__list-link" href="#">
-                  Регистрация
+    <header class="header header-main">
+      <div class="container-top">
+        <div class="header__inner">
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">
+                  Контрагентам
                 </a>
               </li>
-              <li class="profile__list-item profile__list-item-icon">
-                <a class="profile__list-link" href="#">
-                  <img class="profile__list-user" src="images/user-icon.svg" alt="account">
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">
+                  Дизайнерам
                 </a>
-                <a class="profile__list-link" href="#">
-                  <img class="profile__list-favorite" src="images/favorit-icon.svg" alt="favorite">
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">
+                  Вакансии
                 </a>
               </li>
             </ul>
-            </nav>
+          </nav>
+          <div class="logo">
+            <a class="logo__link" href="#">
+              <img class="logo__img" src="images/logo.svg" alt="logo">
+            </a>
           </div>
+          <ul class="profile__list">
+            <li class="profile__list-item">
+              <form class="profile__form" action="/search/">
+                <label class="profile__label">
+                  <img class="profile__form-label-img" src="images/search-icon.svg" alt="search">
+                  <input class="profile__input" type="search" placeholder="Поиск">
+                </label>
+              </form>
+            </li>
+            <li class="profile__list-item">
+              <a class="profile__list-link profile__list-linkentrance" href="#">
+                Вход
+              </a>
+              <a class="profile__list-link" href="#">
+                Регистрация
+              </a>
+            </li>
+            <li class="profile__list-item profile__list-item-icon">
+              <a class="profile__list-link" href="#">
+                <img class="profile__list-user" src="images/user-icon.svg" alt="account">
+              </a>
+              <a class="profile__list-link" href="#">
+                <img class="profile__list-favorite" src="images/favorit-icon.svg" alt="favorite">
+              </a>
+            </li>
+          </ul>
+          </nav>
         </div>
-      </header>
-    </section>
+      </div>
+    </header>
 
     
 
