--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
       <header class="header">
         <div class="container-top">
           <div class="header__inner">
+            
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__list-item">
@@ -41,6 +42,73 @@
                 <img class="logo__img" src="images/logo.svg" alt="logo">
               </a>
             </div>
+            <div class="header__burger">
+              <span></span>
+            </div>
+            <div class="header__adaptive">
+            <ul class="header__adaptive-menu">
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Контрагентам
+                </a>
+              </li>
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Дизайнерам
+                </a>
+              </li>
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Вакансии
+                </a>
+              </li>
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                Вход
+                </a>/
+                <a class="header__adaptive-link" href="#">
+                  Регистрация
+                </a>
+              </li>
+            </ul>
+            <div class="header__adaptive-profile">
+              <a class="header__adaptive-user" href="#">
+                <img class="header__adaptive-img" src="images/user-adaptive.svg" alt="images">
+              </a>
+              <a class="header__adaptive-favorite" href="#">
+                <img class="header__adaptive-img" src="images/favorit-adaptive.svg" alt="images">
+              </a>
+            </div>
+            <div class="header__adaptive-social">
+              <ul class="header__adaptive-social-list">
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-youtube.svg" alt="youtube">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-vkontakte.svg" alt="vkontakte">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-ocial-img" src="images/adaptive-facebook.svg" alt="facebook">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-telegram.svg" alt="telegram">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-ethernet.svg" alt="ethernet">
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
             <ul class="profile__list">
               <li class="profile__list-item">
                 <form class="profile__form" action="/search/">
@@ -273,7 +341,7 @@
                 <img class="assortment__img" src="images/assortment/4.jpg" alt="images">
                 <span>часы</span>
               </a>
-            </div>
+            </div> 
 
             <div class="assortment__items mix rarity">
               <a class="assortment__item" href="#">
@@ -303,7 +371,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>  
 
       <section class="advertising">
         <div class="advertising__pretitle">
@@ -321,7 +389,7 @@
         <a class="advertising__btn" href="#">
           наши салоны
         </a>
-      </section>
+      </section> 
 
       <section class="blog">
         <div class="container">
@@ -361,7 +429,7 @@
             читать наш блог
           </a>
         </div>
-      </section>
+      </section> 
 
       <div class="gallery">
         <div class="container">
@@ -533,7 +601,7 @@
         </div>
       </div>
     </footer>
-  </div>
+  </div> 
 
 
 
