--- a/app/page.html
+++ b/app/page.html
@@ -13,8 +13,8 @@
 
 <body>
   <div class="wrapper">
-    <section class="hero">
-      <header class="header">
+   
+      <header class="header header-main">
         <div class="container-top">
           <div class="header__inner">
             <nav class="menu">
@@ -71,7 +71,7 @@
           </div>
         </div>
       </header>
-    </section>
+  
 
 
 
