--- a/app/category.html
+++ b/app/category.html
@@ -40,6 +40,73 @@
               <img class="logo__img" src="images/logo.svg" alt="logo">
             </a>
           </div>
+          <div class="header__burger">
+            <span></span>
+          </div>
+          <div class="header__adaptive">
+          <ul class="header__adaptive-menu">
+            <li class="header__adaptive-item">
+              <a class="header__adaptive-link" href="#">
+                Контрагентам
+              </a>
+            </li>
+            <li class="header__adaptive-item">
+              <a class="header__adaptive-link" href="#">
+                Дизайнерам
+              </a>
+            </li>
+            <li class="header__adaptive-item">
+              <a class="header__adaptive-link" href="#">
+                Вакансии
+              </a>
+            </li>
+            <li class="header__adaptive-item">
+              <a class="header__adaptive-link" href="#">
+              Вход
+              </a>/
+              <a class="header__adaptive-link" href="#">
+                Регистрация
+              </a>
+            </li>
+          </ul>
+          <div class="header__adaptive-profile">
+            <a class="header__adaptive-user" href="#">
+              <img class="header__adaptive-img" src="images/user-adaptive.svg" alt="images">
+            </a>
+            <a class="header__adaptive-favorite" href="#">
+              <img class="header__adaptive-img" src="images/favorit-adaptive.svg" alt="images">
+            </a>
+          </div>
+          <div class="header__adaptive-social">
+            <ul class="header__adaptive-social-list">
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-social-img" src="images/adaptive-youtube.svg" alt="youtube">
+                </a>
+              </li>
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-social-img" src="images/adaptive-vkontakte.svg" alt="vkontakte">
+                </a>
+              </li>
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-ocial-img" src="images/adaptive-facebook.svg" alt="facebook">
+                </a>
+              </li>
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-social-img" src="images/adaptive-telegram.svg" alt="telegram">
+                </a>
+              </li>
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-social-img" src="images/adaptive-ethernet.svg" alt="ethernet">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
           <ul class="profile__list">
             <li class="profile__list-item">
               <form class="profile__form" action="/search/">
@@ -139,7 +206,7 @@
             </div>
           </div>
 
-          <div class="catalog__box">
+         <div class="catalog__box">
             <ul class="catalog__items">
               <li class="catalog__item">
                 <a class="catalog__item-link" href="#">
@@ -212,6 +279,7 @@
         </div>
         </div>
       </section>
+      
       <div class="information">
         <div class="container">
           <div class="information__inner">
