adaptive contact page

--- a/app/contact.html
+++ b/app/contact.html
@@ -16,6 +16,7 @@
     <header class="header header-main">
       <div class="container-top">
         <div class="header__inner">
+
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
@@ -39,6 +40,73 @@
             <a class="logo__link" href="#">
               <img class="logo__img" src="images/logo.svg" alt="logo">
             </a>
+          </div>
+          <div class="header__burger">
+            <span></span>
+          </div>
+          <div class="header__adaptive">
+            <ul class="header__adaptive-menu">
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Контрагентам
+                </a>
+              </li>
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Дизайнерам
+                </a>
+              </li>
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Вакансии
+                </a>
+              </li>
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Вход
+                </a>/
+                <a class="header__adaptive-link" href="#">
+                  Регистрация
+                </a>
+              </li>
+            </ul>
+            <div class="header__adaptive-profile">
+              <a class="header__adaptive-user" href="#">
+                <img class="header__adaptive-img" src="images/user-adaptive.svg" alt="images">
+              </a>
+              <a class="header__adaptive-favorite" href="#">
+                <img class="header__adaptive-img" src="images/favorit-adaptive.svg" alt="images">
+              </a>
+            </div>
+            <div class="header__adaptive-social">
+              <ul class="header__adaptive-social-list">
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-youtube.svg" alt="youtube">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-vkontakte.svg" alt="vkontakte">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-ocial-img" src="images/adaptive-facebook.svg" alt="facebook">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-telegram.svg" alt="telegram">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-ethernet.svg" alt="ethernet">
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
           <ul class="profile__list">
             <li class="profile__list-item">
@@ -154,7 +222,7 @@
         <div class="container">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1999.1555708788967!2d30.367120816096584!3d59.92956068187285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469631bbf21903b9%3A0xbbb6baf952f45fb6!2z0J3QtdCy0YHQutC40Lkg0L_RgC4sIDE0Miwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsINCg0L7RgdGB0LjRjywgMTkxMDM2!5e0!3m2!1sru!2skz!4v1627312695605!5m2!1sru!2skz"
-            width="100%" height="750" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </div>
 
