--- a/app/product.html
+++ b/app/product.html
@@ -16,6 +16,7 @@
     <header class="header header-main">
       <div class="container-top">
         <div class="header__inner">
+          
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
@@ -40,6 +41,73 @@
               <img class="logo__img" src="images/logo.svg" alt="logo">
             </a>
           </div>
+          <div class="header__burger">
+            <span></span>
+          </div>
+          <div class="header__adaptive">
+          <ul class="header__adaptive-menu">
+            <li class="header__adaptive-item">
+              <a class="header__adaptive-link" href="#">
+                Контрагентам
+              </a>
+            </li>
+            <li class="header__adaptive-item">
+              <a class="header__adaptive-link" href="#">
+                Дизайнерам
+              </a>
+            </li>
+            <li class="header__adaptive-item">
+              <a class="header__adaptive-link" href="#">
+                Вакансии
+              </a>
+            </li>
+            <li class="header__adaptive-item">
+              <a class="header__adaptive-link" href="#">
+              Вход
+              </a>/
+              <a class="header__adaptive-link" href="#">
+                Регистрация
+              </a>
+            </li>
+          </ul>
+          <div class="header__adaptive-profile">
+            <a class="header__adaptive-user" href="#">
+              <img class="header__adaptive-img" src="images/user-adaptive.svg" alt="images">
+            </a>
+            <a class="header__adaptive-favorite" href="#">
+              <img class="header__adaptive-img" src="images/favorit-adaptive.svg" alt="images">
+            </a>
+          </div>
+          <div class="header__adaptive-social">
+            <ul class="header__adaptive-social-list">
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-social-img" src="images/adaptive-youtube.svg" alt="youtube">
+                </a>
+              </li>
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-social-img" src="images/adaptive-vkontakte.svg" alt="vkontakte">
+                </a>
+              </li>
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-ocial-img" src="images/adaptive-facebook.svg" alt="facebook">
+                </a>
+              </li>
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-social-img" src="images/adaptive-telegram.svg" alt="telegram">
+                </a>
+              </li>
+              <li class="header__adaptive-social-item">
+                <a class="header__adaptive-social-link" href="#">
+                  <img class="header__adaptive-social-img" src="images/adaptive-ethernet.svg" alt="ethernet">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
           <ul class="profile__list">
             <li class="profile__list-item">
               <form class="profile__form" action="/search/">
@@ -170,7 +238,6 @@
             </div>
           </div>
         </div>
-
       </section>
 
       <div class="information">
@@ -217,7 +284,7 @@
                 </p>
               </div>
 
-              <div class="information__btn  ">
+              <div class="information__btn">
                 читать полностью
               </div>
             </div>
